--- a/templates/user/create.html
+++ b/templates/user/create.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<!-- saved from url=(0100)https://eu.pythonanywhere.com/user/19roberl/files/home/19roberl/music_app/templates/user/create.html -->
-<html lang="en" class="hydrated"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style data-styles="">ion-icon{visibility:hidden}.hydrated{visibility:inherit}</style>
-    <link rel="stylesheet" href="./create_files/index.css&#39;) }}">
+<html lang="en">
+  <head>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/index.css') }}"
+    />
 
-    <!--link rel="stylesheet" type="text/css" href="index.css" /-->
+    <!link rel="stylesheet" type="text/css" href="index.css" />
     <title>Homepage</title>
-  <style type="text/css">@font-face{font-family:Gilroy;font-style:normal;font-weight:100 400;src:url(https://pouch-global-font-assets.s3.eu-central-1.amazonaws.com/Gilroy-Medium.otf)}@font-face{font-family:Gilroy;font-style:normal;font-weight:500 900;src:url(https://pouch-global-font-assets.s3.eu-central-1.amazonaws.com/Gilroy-Bold.otf)}@font-face{font-family:"Font Awesome 5 Free";font-style:normal;font-weight:900;src:url(https://use.fontawesome.com/releases/v5.6.3/webfonts/fa-solid-900.woff2) format("woff2")}@font-face{font-family:"Font Awesome 5 Brands";font-style:normal;font-weight:normal;src:url(https://use.fontawesome.com/releases/v5.6.3/webfonts/fa-brands-400.woff2) format("woff2")}
-</style></head>
+  </head>
   <body>
     <section>
       <div class="form-box">
@@ -14,7 +16,13 @@
 
       </div>
     </section>
-    <script type="module" src="./create_files/ionicons.esm.js.download"></script>
-    <script nomodule="" src="./create_files/ionicons.js.download"></script>
-  
-
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
+</html>
