--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -13,8 +13,18 @@
     <section>
       <div class="form-box">
         <div class="form-value">
+
           <form action="/users/create" method="post">
             <h2>Enter username and password</h2>
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <ul class="flashes">
+                        {% for message in messages %}
+                            <li>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            {% endwith %}
             <div class="inputbox">
               <ion-icon name="person-outline"></ion-icon>
               <input name="username" min="1" max="150" required />
