Added basis for room system, not functioning yet.
Web Socket Next update

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <!-- saved from url=(0093)https://eu.pythonanywhere.com/user/19roberl/files/home/19roberl/music_app/templates/home.html -->
 <html lang="en" class="hydrated"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style data-styles="">ion-icon{visibility:hidden}.hydrated{visibility:inherit}</style>
-    <link rel="stylesheet" href="./home_files/index.css&#39;) }}">
+  <link
+  rel="stylesheet"
+  href="{{ url_for('static', filename='css/index.css') }}"
+/>
 
     <!--link rel="stylesheet" type="text/css" href="index.css" /-->
     <title>Homepage</title>
