--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,205 +1,331 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500 &display=swap");
 * {
-  margin: 0;
-  padding: 0;
-  font-family: "poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: "poppins", sans-serif;
 }
 section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
 
-  background: url("background4.jpg") no-repeat;
-  background-position: center;
-  background-size: cover;
+    background: url("background4.jpg") no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.Rooms-list h2 {
+    font-size: 1.8em;
+    color: #000;
+    text-align: center;
+    margin-top: 10px;
+}
+#userList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px; /* spacing between boxes */
+    justify-content: center; /* center the boxes */
+}
+
+#userList li {
+    list-style-type: none; /* remove bullet points */
+    background-color: #007BFF; /* example color */
+    color: #fff; /* text color */
+    padding: 20px; /* spacing inside the box */
+    border-radius: 8px; /* rounded corners */
+    width: 150px; /* fixed width */
+    height: 100px; /* fixed height */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-weight: bold;
 }
 .form-box {
-  position: relative;
-  width: 450px;
-  height: 550px;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
-  backdrop-filter: blur(15px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: relative;
+    width: 450px;
+    height: 550px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.carousel {
-  max-width: 60%; /* Adjust the width to your preference */
-  max-height: 60%; /* Adjust the height to your preference */
-  margin: 0 auto; /* Center the carousel */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.container {
+    width: 100%;
+    height: 100px;
+    align-items: center;
+}
+.Rooms-list {
+    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column; /* Stack elements vertically */
+    align-items: center; /* Center horizontally */
+    justify-content: flex-start; /* Align items to the top of the container */
+    height: calc(100vh - 50px);
+
+}
+.Rooms-list h1 {
+    font-size: 2em;
+    color: #000;
+    text-align: center;
+    margin-top: 10px; /* Add space between nav bar and h1 */
+}
+.create-room-form-box {
+    margin-top: 10px;
+    margin-left: 35%;
+    background-color: rgba(78, 78, 78, 0.5);
+    width: 450px;
+    height: 550px;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.carousel img {
-  max-height: 100%; /* Scale images proportionally to the carousel height */
-  object-fit: contain; /* Ensure images are scaled properly */
-}
-.carousel-caption {
-  position: absolute;
-  bottom: 10px; /* Adjust this value to change the distance from the bottom */
-  transform: translateX(-12.5%);
-  width: 300px;
-  height: 150px;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
-  backdrop-filter: blur(30px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column; /* Add this line to stack elements vertically */
+.nav {
+    height: 50px;
+    width: 100%;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #4d4d4d;
+    position: relative;
+    border: none;
+    border-radius: 10px 10px 0 0;
 }
 
-.film-box {
-  position: relative;
-  width: 1350px;
-  height: 600px;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
-  backdrop-filter: blur(15px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.nav .nav-header {
+    width: 50%;
+    display: inline;
 }
-.ratings-box {
-  position: relative;
-  width: 600px;
-  height: 450px;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
-  backdrop-filter: blur(15px);
-  justify-content: center;
-  align-items: stretch;
+
+.nav .nav-header .nav-title {
+    display: inline-block;
+    font-size: 22px;
+    color: #fff;
+    padding: 10px;
+}
+
+.nav .nav-btn {
+    display: none;
+}
+
+.nav .nav-links {
+    width: 50%;
+    display: inline-flex;
+    justify-content: flex-end;
+    column-gap: 20px;
+    font-size: 18px;
+    border: none;
+    border-radius: 0 0 10px 10px;
+}
+
+.nav .nav-links a {
+    display: inline-block;
+    padding: 10px;
+    text-decoration: none;
+    color: #efefef;
+}
+
+.nav .nav-links a:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.nav #nav-check {
+    display: none;
+}
+
+@media(max-width:600px) {
+    .nav .nav-btn {
+        display: inline-block;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .nav .nav-btn label {
+        display: flex;
+        flex-direction: column;
+        row-gap: 5px;
+        width: 50px;
+        height: 50px;
+        padding: 15px;
+        border: none;
+        border-top-right-radius: 10px;
+    }
+    .nav .nav-btn label:hover,
+    .nav #nav-check:checked ~ .nav-btn label {
+        background-color: rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+    }
+    .nav .nav-btn label span {
+        display: block;
+        width: 25px;
+        height: 5px;
+        background-color: #eee;
+        border-radius: 5px;
+    }
+    .nav .nav-links {
+        position: absolute;
+        display: block;
+        width: 100%;
+        background-color: #333;
+        height: 0;
+        transition: all 0.3s ease-in;
+        overflow-y: hidden;
+        top: 50px;
+        left: 0;
+    }
+    .nav .nav-links a {
+        display: block;
+        width: 100%;
+        padding-left: 20px;
+    }
+    .nav #nav-check:not(:checked) ~ .nav-links {
+        height: 0;
+    }
+    .nav #nav-check:checked ~ .nav-links {
+        height: 250px;
+        overflow-y: hidden;
+    }
+}
+
+.attribute {
+    position: absolute;
+    bottom: 10px;
+}
+.create-button {
+    background-color: grey;
+    border: 0;
+    border-radius: 20px;
+    width: 200px;
+    height: 50px;
 }
 h2 {
-  font-size: 2em;
-  color: #fff;
-  text-align: center;
+    font-size: 2em;
+    color: #fff;
+    text-align: center;
 }
 h3 {
-  font-size: 2em;
-  color: #fff;
-  text-align: center;
-  position: absolute;
-  left: 10%;
-}
-.images-box {
-  position: absolute;
-  top: 25%;
-  left: 7.5%;
-  display: flex;
-  width: 500px;
-  height: 200px;
-  justify-content: space-around;
-  align-items: center;
+    font-size: 2em;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    left: 10%;
 }
 .button-box {
-  position: relative;
-  top: 67.5%;
-  left: 7.5%;
-  width: 500px;
-  height: 40px;
-  justify-content: center;
-  align-items: center;
+    position: relative;
+    top: 67.5%;
+    left: 7.5%;
+    width: 500px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
 }
 .button-box-2 {
-  position: relative;
-  top: 65%;
-  left: 7.5%;
-  width: 500px;
-  height: 40px;
-  justify-content: center;
-  align-items: center;
+    position: relative;
+    top: 65%;
+    left: 7.5%;
+    width: 500px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
 }
 .inputbox {
-  position: relative;
-  left: 40px;
-  margin: 40px 0;
-  width: 350px;
-  border-bottom: 2px solid #fff;
+    position: relative;
+    margin: 40px 0;
+    width: 350px;
+    border-bottom: 2px solid #fff;
 }
 .txtbox {
-  position: relative;
-  margin: 40px 0;
-  width: 350px;
-  border: 3px solid #fff;
+    position: relative;
+    margin: 40px 0;
+    width: 350px;
+    border: 3px solid #fff;
 }
 .inputbox label {
-  position: absolute;
-  top: 50%;
-  left: 5px;
-  transform: translateY(-50%);
-  color: #fff;
-  font-size: 1em;
-  pointer-events: none;
-  transition: 0.5s;
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    color: #fff;
+    font-size: 1em;
+    pointer-events: none;
+    transition: 0.5s;
 }
 input:focus ~ label,
 input:valid ~ label {
-  top: -5px;
+    top: -5px;
 }
 .inputbox input {
-  width: 100%;
-  height: 50px;
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 1em;
-  padding: 0 35px 0 5px;
-  color: #fff;
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    padding: 0 35px 0 5px;
+    color: #fff;
 }
 .inputbox ion-icon {
-  position: absolute;
-  right: 8px;
-  color: #fff;
-  font-size: 1.2em;
-  top: 20px;
+    position: absolute;
+    right: 8px;
+    color: #fff;
+    font-size: 1.2em;
+    top: 20px;
 }
 .forget {
-  margin: -15px 0 15px;
-  font-size: 0.9em;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
+    margin: -15px 0 15px;
+    font-size: 0.9em;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
 }
 
 .forget label input {
-  margin-right: 3px;
+    margin-right: 3px;
 }
 .forget label a {
-  color: #fff;
-  text-decoration: none;
+    color: #fff;
+    text-decoration: none;
 }
 .forget label a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
-button {
-  width: 100%;
-  height: 40px;
-  border-radius: 40px;
-  background: #fff;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  font-size: 1em;
-  font-weight: 600;
+.form-submit {
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    background: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 600;
 }
 .register {
-  font-size: 0.9em;
-  color: #fff;
-  text-align: center;
-  margin: 25px 0 10px;
+    font-size: 0.9em;
+    color: #fff;
+    text-align: center;
+    margin: 25px 0 10px;
 }
 .register p a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: 600;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 600;
 }
 .register p a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
