--- a/templates/login.html
+++ b/templates/login.html
@@ -33,8 +33,8 @@
                     <input type="password" id="password" name="password" required="">
                     <label for="password">Password:</label>
                 </div>
-                <button>Submit</button>
-                <a href="http://musicapp-19roberl.eu.pythonanywhere.com/users">Don't have an account? Click Here</a>
+                <button class="form-submit">Submit</button>
+                <a href="http://192.168.86.228:5000/users">Don't have an account? Click Here</a>
                 
             </form>
         </div>
