--- a/templates/room/create.html
+++ b/templates/room/create.html
@@ -1,33 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/index.css') }}"
     />
-  <title>Create a Room</title>
-</head>
+    <title>Create a Room</title>
+  </head>
 
-<body>
-  <section>
-    <div class="form-box">
-      
-
-      <form method="POST" action="{{ url_for('room_create') }}">
-        <h1>Create a Room</h1>
-        <div class="inputbox">
-        <input type="text" id="name" name="name" required>
-        <label for="name">Room Name:</label>
+  <body
+    style="
+      font-family: sans-serif;
+      min-height: 100vh;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      background-color: #f0f0f0;
+      font-family: 'poppins';
+      position: relative;
+    "
+  >
+    <div class="container">
+      <div class="nav">
+        <input type="checkbox" id="nav-check" />
+        <div class="nav-header">
+          <div class="nav-title">{{ username }}</div>
         </div>
-        <button type="submit">Create Room</button>
-      </form>
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </div>
+        <div class="nav-links">
+          <a href="{{ url_for('home') }}">Home</a>
+          <a href="{{ url_for('room_create') }}">New Game</a>
+          <a href="{{ url_for('logout') }}">Logout</a>
+        </div>
+      </div>
+      <div class="rooms-list">
+        <div class="create-room-form-box">
+          <form method="POST" action="{{ url_for('room_create') }}">
+            <h1>Create a Room</h1>
+            <div class="inputbox">
+              <input type="text" id="name" name="name" required />
+              <label for="name">Room Name:</label>
+            </div>
+            <button type="submit" class="form-submit">Create Room</button>
+          </form>
+        </div>
+      </div>
     </div>
-  </section>
 
-  <script src="script.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
