--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -40,7 +40,7 @@
               <input type="password" name="password" min="1" max="150" required />
               <label for="password">Password</label>
               </div>
-              <button>Submit</button>
+              <button class="form-submit">Submit</button>
             </div>
           </form>
         </div>
