--- a/templates/home.html
+++ b/templates/home.html
@@ -69,6 +69,7 @@
           </label>
         </div>
         <div class="nav-links">
+          <a href="{{ url_for('room') }}">Join Game</a>
           <a href="{{ url_for('room_create') }}">New Game</a>
           <a href="{{ url_for('logout') }}">Logout</a>
         </div>
@@ -76,6 +77,16 @@
       </div>
       <div class="Rooms-list">
         <h1>Rooms</h1>
+        {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <ul class="flashes">
+                        {% for message in messages %}
+                            <li>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            {% endwith %}
+            <li id="userList"></li>
       </div>
     </div>
     <!-- ... -->
