--- a/static/css/index.css
+++ b/static/css/index.css
@@ -101,11 +101,11 @@ section {
     align-items: center;
 }
 #qrcode {
-  border: 5px solid #023B4F;
-  border-radius: 10px;
-  position: relative;
-  left: 10%;
-  top: 19%;
+    border: 5px solid #023B4F;
+    border-radius: 10px;
+    position: relative;
+    left: 10%;
+    top: 19%;
 }
 
 .code-bar {
@@ -273,12 +273,40 @@ h3 {
     justify-content: center;
     align-items: center;
 }
+.button-box-2 {
+    position: relative;
+    top: 65%;
+    left: 7.5%;
+    width: 500px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+}
+.button-game {
+    width: 350px;
+    height: 40px;
+    border-radius: 40px;
+    background: #0A5368;
+    color: white;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 600;
+}
 .inputbox {
     position: relative;
     margin: 40px 0;
     width: 350px;
     border-bottom: 2px solid #fff;
 }
+.inputbox-game {
+    position: relative;
+    margin: 40px 0;
+    width: 350px;
+    border-bottom: 2px solid #0A5368;
+}
+
 .txtbox {
     position: relative;
     margin: 40px 0;
@@ -291,6 +319,16 @@ h3 {
     left: 5px;
     transform: translateY(-50%);
     color: #fff;
+    font-size: 1em;
+    pointer-events: none;
+    transition: 0.5s;
+}
+.inputbox-game label {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    color: #0A5368;
     font-size: 1em;
     pointer-events: none;
     transition: 0.5s;
@@ -309,10 +347,20 @@ input:valid ~ label {
     padding: 0 35px 0 5px;
     color: #fff;
 }
+.inputbox-game input {
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    padding: 0 35px 0 5px;
+    color: #0A5368;
+}
 .inputbox ion-icon {
     position: absolute;
     right: 8px;
-    color: #fff;
+    color: #0A5368;
     font-size: 1.2em;
     top: 20px;
 }
